# MsciProject

./: .gitignore
retina_reinforcement_sim/: CMakeLists.txt  package.xml  setup.py
retina_reinforcement_sim/launch/: baxter.launch  baxter_learning_env.launch  baxter_pick_and_place_demo.launch  environment.launch
retina_reinforcement_sim/models/block/: model.urdf
retina_reinforcement_sim/models/simple_ball/: model.config  model.sdf
retina_reinforcement_sim/scripts/: baxter_eval.py  baxter_eval_features.py  baxter_gather_data.py  baxter_gather_images.py  baxter_play_env.py  baxter_run_agent.py  baxter_srnet_visualise.py  baxter_test_env.py  baxter_train.py  baxter_train_dynamics.py  baxter_train_features.py  baxter_train_her.py  baxter_train_srnet.py  baxter_visualise_cnn.py  gather_baxter_data.py  gather_data.py  ik_pick_and_place_demo.py  learn_state.py  learning_env.py  nn.py  pendulum.py  pendulum_train.py  plot_training_data.py  test.py  test_baxter_env.py  test_environment.py  train_ddpg.py
retina_reinforcement_sim/src/environment/: __init__.py  baxter_environment.py  baxter_environment_her.py  camera_controller.py  environment.py  image_processor.py  pendulum_environment.py  retina.py
retina_reinforcement_sim/src/model/: __init__.py  actor.py  feature_extractor.py  models.py  pendulum_models.py
retina_reinforcement_sim/src/training/: __init__.py  baxter_ddpg.py  ddpg.py  ddpg_base.py  ddpg_cnn.py  ddpg_her.py  ddpg_low.py  ddpg_mlp.py  ddpg_pixel.py  ddpg_retina.py  ddpg_sr.py  memory.py  noise.py  normalizer.py  pendulum_ddpg.py  pendulum_pixel_ddpg.py  preprocessor.py  trainer.py
