<?xml version="1.0"?>
<package>
  <name>retina_reinforcement_sim</name>
  <version>0.0.0</version>
  <description>The retina_reinforcement_sim package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lewis@todo.todo">lewis</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_gazebo</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>baxter_tools</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_gazebo</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>baxter_tools</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_msgs</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>

</package>
